--- a/index.html
+++ b/index.html
@@ -235,7 +235,9 @@
         </div>
 
         <div class="question" id="question-15" style="display: none;">
-            <p>15- A patient presents with atrial fibrillation and later reverts to sinus rhythm. He asked you about prognosis and recurrence. Under which of the following circumstances is the patient more likely to remain in sinus rhythm?</p>
+            <p>15- A 69-year-old man is treated for chest infection. He has been on a stable dose of 
+                warfarin for the last six months as a treatment for atrial fibrillation, with INR 
+                recordings between 2-2.5. However, his most recent INR was 5. Which one of the following drugs is likely to be responsible for his result?</p>
             <div class="options">
                 <label><input type="radio" name="q15" value="Clarithromycin"> Clarithromycin </label>
                 <label><input type="radio" name="q15" value="Digoxin"> Digoxin </label>
